src/test/ui/nll/user-annotations/issue-54124.rs
#![feature(nll)]

fn test<'a>() {
    let _:fn(&()) = |_:&'a ()| {};
}

fn main() {
    test();
}
